# Rust-Website

./: Cargo.toml  README.md  build.sh  index.html
.VSCodeCounter/2024-06-27_22-06-54/: README.md
.devcontainer/: devcontainer.json
src/: index.html  main.rs
static/: download.html  index.html
static/err/: 403.html
static/pages/docs/: index.html
