[package]
name = "awesome"
version = "0.1.0"
authors = ["S.C. Lorentz <113468900+SCLorentz@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.dev]
opt-level = "z"
strip = true  # Automatically strip symbols from the binary.
lto = true
